# image-processor

./: CMakeLists.txt  README.md  image_processor.cpp
bmp/: bmp_header.cpp  bmp_header.h  read_from_bmp.cpp  read_from_bmp.h  write_to_bmp.cpp  write_to_bmp.h
command_line_arguments/: command_line_arguments.cpp  command_line_arguments.h
filters/: bloom_effect.cpp  bloom_effect.h  convolution.cpp  convolution.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  median_filter.cpp  median_filter.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
matrix/: matrix.h
rgb/: rgb.cpp  rgb.h
